--- a/_posts/1970-01-01-test.md
+++ b/_posts/1970-01-01-test.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Style Test"
 date:   1970-01-01 08:00
 categories: jekyll
-permalink: /archivers/test
+permalink: /test/
 ---
 
 This is just a style test post, filled with LoremIpsue. Feel free to delete the file.
@@ -51,13 +51,14 @@ Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
 
 taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam erat volutpat. Sed at semper sem. Morbi in finibus tellus. Pellentesque nec dapibus risus.
 
-```cpp
+{% highlight cpp %}
   #include <iostream>
  
   int main () {
     std::cout << "Hello world!" << std::endl;
   }
-```
+{% endhighlight %}
+
 
 vitae erat non congue. Proin sagittis vitae justo at cursus. Phasellus egestas bibendum urna vel condimentum.
 
