adding 404 new design

--- a/404.md
+++ b/404.md
@@ -1,9 +1,12 @@
 ---
-layout: page
+layout: notfound
 title: Page Not Found
 permalink: /404.html
 nocomments: true
 public: false
 ---
 
-Seems disappeared :(
+
+
+
+
