--- a/404.md
+++ b/404.md
@@ -1,12 +1,9 @@
 ---
-layout: notfound
-title: Page Not Found
+layout: page
+title:
 permalink: /404.html
 nocomments: true
 public: false
 ---
 
-
-
-
-
+  {% include notfound.html %}
